cmake_minimum_required(VERSION 3.19)
project(highPerformance1 C)
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
set(CMAKE_C_STANDARD 99)

add_executable(highPerformance1 main.c treeSort/binary_tree.c treeSort/binary_tree.h utils/linked_list.c utils/linked_list.h const.h utils/array_utils.c utils/array_utils.h utils/test_utils.c utils/test_utils.h smoothSort/smooth_sort.c smoothSort/smooth_sort.h)